# sentiment-analysis-banamex

./: .env.example  .gitignore  CLAUDE.md  README_DEMO.md  docker-compose.yml
analytics/: README.md  pyproject.toml
analytics/src/analytics/: __init__.py  actions.py  impact.py  insights.py  nps.py  personnel.py  ranking.py  representatives.py  schemas.py  topics.py  trends.py  words.py
analytics/src/analytics/data/: stopwords_es_banking.txt
analytics/tests/: conftest.py  test_actions.py  test_impact.py  test_insights.py  test_nps.py  test_personnel.py  test_ranking.py  test_representatives.py  test_topics.py  test_trends.py  test_words.py
analytics/tests/fixtures/: synthetic_db.sql
api/: Dockerfile  README.md  export_openapi.py  openapi.json  pyproject.toml
api/src/api/: __init__.py  _classifier_shim.py  auth.py  deps.py  dtos.py  errors.py  export_openapi.py  main.py  models_api.py  settings.py
api/src/api/routes/: __init__.py  admin.py  auth.py  branches.py  national.py  upload.py  validation.py
api/tests/: conftest.py  test_admin.py  test_auth.py  test_branches.py  test_cors_and_errors.py  test_health.py  test_national.py  test_upload.py  test_validation.py
core/: README.md  pyproject.toml
core/src/core/: __init__.py  db.py  loader.py  models_db.py  parser.py  schema.sql  schemas.py  targets.py
core/tests/: conftest.py  test_loader.py  test_parser.py  test_targets.py
core/tests/fixtures/: build_sample.py  sample.tsv
docs/: 20260514_CX_Sucursales_Tec_Monterrey_Hackathon_Caso_CX.pptx  DASHBOARD.md  ESTADO.md  MVP Hackathon.md  contexto_estrategico_reto_sentimientos_banamex.md  taxonomia_revisada.md
docs/plan_implementacion/: 00_decisiones_tecnicas.md  01_contratos_compartidos.md  02_M1_datos.md  03_M2a_anotador.md  04_M2b_clasificador.md  05_M3_analytics.md  06_M4_api.md  07_M5_frontend.md  08_M6_integracion.md  09_riesgos_y_demo_script.md  README.md  contracts_issues.md
engine/: README.md  pyproject.toml
engine/src/engine/: __init__.py  annotator.py  classifier.py  cli.py  embeddings.py  extractors.py  mocks.py  pipeline.py  prompts.py  taxonomy.py  trainer.py  ui_buckets.py
engine/src/engine/data/: channel_keywords.txt  mexican_banks.txt  spanish_names.txt
engine/tests/: _synthetic_golden.py  conftest.py  test_annotator.py  test_classifier.py  test_embeddings.py  test_extractors.py  test_mocks.py  test_pipeline.py  test_taxonomy.py  test_trainer.py
engine/tests/fixtures/: generate_verbalizations.py  verbalizations.csv
scripts/: generate_openapi_client.sh  preprocess_corpora.py  seed_db.py  smoke_test.sh  start.sh
web/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: index.css  main.tsx  routes.tsx
web/src/api/: client.ts  queries.ts  queryClient.ts  schema.d.ts
web/src/components/: ActionsPanel.tsx  AuthGuard.tsx  BranchSelector.tsx  CausesPanel.tsx  CriticalBranchesTable.tsx  DistributionChart.tsx  InsightsList.tsx  Layout.tsx  MonthSelector.tsx  NPSCard.tsx  PersonnelTable.tsx  RankingsPanel.tsx  RepresentativeComments.tsx  Sidebar.tsx  StrengthsPanel.tsx  SyntheticTargetsBanner.tsx  TrendChart.tsx  WordsCloud.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  combobox.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  skeleton.tsx  table.tsx  tabs.tsx  toast.tsx
web/src/hooks/: useAuth.ts  useBranch.ts
web/src/lib/: colors.ts  format.ts  seed.ts
web/src/mocks/: fixtures.ts  handlers.ts
web/src/pages/: AdminPage.tsx  BranchComparePage.tsx  BranchYTDPage.tsx  BranchesIndexPage.tsx  LoginPage.tsx  NationalComparePage.tsx  NationalYTDPage.tsx  UploadPage.tsx
web/tests/: AuthGuard.test.tsx  CausesPanel.test.tsx  Combobox.test.tsx  DistributionChart.test.tsx  MonthSelector.test.tsx  NPSCard.test.tsx  apiClient.test.ts  handlers.test.ts  setup.ts  useAuth.test.tsx
web/tests/pages/: BranchYTDPage.test.tsx  NationalYTDPage.test.tsx
