[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics"
version = "0.1.0"
description = "Agregaciones para el dashboard ejecutivo (NPS, brechas, rankings, insights)."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
analytics = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
