[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "engine"
version = "0.1.0"
description = "Motor de clasificación híbrido: LLM anotador (M2a) + clasificador supervisado (M2b)."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "numpy>=1.26",
    "pandas>=2.2",
    # M2a: cliente Ollama + extractores rule-based
    "ollama>=0.4",
    "regex>=2024.5",
    "unidecode>=1.3",
    "jsonschema>=4.0",
    # M2b: embeddings + clasificador supervisado
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "joblib>=1.4",
    # Compartidos con core
    "core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
engine = "engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
engine = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
